--- a/HackBattle_ERROR/signin.css
+++ b/HackBattle_ERROR/signin.css
@@ -22,7 +22,8 @@
 }
 button{
     border-radius: 10%;
-    margin-bottom: 10px;  
+    margin-bottom: 10px; 
+    margin-right:50px; 
 }
 h2{
     text-align: center;
